[package]
name = "n1encoderactions"
version = "0.1.0"
edition = "2024"

[dependencies]
openaction = "2.5.0"
tokio = { version = "1.44.2", features = ["full"] }
log = "0.4.27"
simplelog = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[[bin]]
name = "n1encoderactions"
path = "src/main.rs"
